...
                                                        <rect key="frame" x="0.0" y="0.0" width="335" height="60"/>
                                                        <subviews>
                                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="youremail@email.com" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="Ccl-1K-FBD">
                                                                <rect key="frame" x="20" y="18" width="295" height="24"/>
                                                                <constraints>
...
                                                        <rect key="frame" x="0.0" y="72" width="335" height="60"/>
                                                        <subviews>
                                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="password" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="3lH-0W-1as">
                                                                <rect key="frame" x="20" y="18" width="295" height="24"/>
                                                                <constraints>
...
                                                        <color key="tintColor" red="0.20392156862745098" green="0.38039215686274508" blue="0.99215686274509807" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                        <state key="normal" title="Button"/>
                                                        <buttonConfiguration key="configuration" style="filled" title="Sign in" cornerStyle="large"/>
                                                        <connections>
                                                            <action selector="signInButton:" destination="ffQ-Ml-Vgj" eventType="touchUpInside" id="f74-nc-BL1"/>
...
                                                <rect key="frame" x="316" y="-3" width="44" height="36"/>
                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
                                                <state key="normal" title="Save">
                                                    <color key="titleColor" name="CustomTextColor"/>
                                                </state>
...
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Add Operation" image="plus.circle" catalog="system" id="8qc-Od-njP"/>
                    <navigationItem key="navigationItem" id="kgp-1m-6eG"/>
                    <connections>
...
                                                    </constraints>
                                                    <color key="tintColor" name="DarkCustomTextColor"/>
                                                    <state key="normal" backgroundImage="ellipsis" catalog="system">
                                                        <color key="titleColor" name="DarkCustomTextColor"/>
                                                    </state>
...
                                                    <rect key="frame" x="10" y="0.0" width="335" height="43.5"/>
                                                    <subviews>
                                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="New category" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oyD-2D-jVU">
                                                            <rect key="frame" x="0.0" y="5" width="255" height="34"/>
                                                            <color key="backgroundColor" name="TextFieldColor"/>
...
                                                            </constraints>
                                                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
                                                            <state key="normal" title="Add">
                                                                <color key="titleColor" name="DarkCustomTextColor"/>
                                                            </state>
...
