...
    func setCategoryInNewOperation(categoryUUID: UUID) {
        newOperation.category = categoryUUID
    }

    func menuArrayCalculate() {
        let screen2MenuList0 = SettingMenuData(name: "Header", text: "")
        let screen2MenuList1 = SettingMenuData(name: "Category", text: "Select category")
        let screen2MenuList2 = SettingMenuData(name: "Date", text: "Today")
        let screen2MenuList3 = SettingMenuData(name: "Notes", text: "")
        settingMenuArray = [screen2MenuList0, screen2MenuList1, screen2MenuList2, screen2MenuList3]
    }

    func getSettingMenuArray() -> [SettingMenuData] {
...
        let flexSpace = UIBarButtonItem(
            barButtonSystemItem: UIBarButtonItem.SystemItem.flexibleSpace,
            target: nil,
            action: nil
        )
        let done: UIBarButtonItem = UIBarButtonItem(
            title: "Done",
            style: UIBarButtonItem.Style.done,
            target: self,
            action: #selector(self.doneButtonAction)
        )

        let items = [flexSpace, done]
...
